+ remove mac folder and change color

--- a/resources/css/config.reui.css
+++ b/resources/css/config.reui.css
@@ -7,7 +7,7 @@
   --card-foreground: var(--color-zinc-950);
   --popover: var(--color-white);
   --popover-foreground: var(--color-zinc-950);
-  --primary: var(--color-blue-500);
+  --primary: #0e76bc;
   --primary-foreground: var(--color-white);
   --secondary: var(--color-zinc-100);
   --secondary-foreground: var(--color-zinc-900);
