--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,7 @@
 @import './components/rating.css';
 @import './components/image-input.css';
 @import './components/scrollable.css';
+@import './components/react-calendar.css';
 
 @import './demos/demo1.css';
 
